Overflow fix on panel-footer

--- a/Js/Backend/Assets/styles/sass/components/panel.scss
+++ b/Js/Backend/Assets/styles/sass/components/panel.scss
@@ -24,6 +24,7 @@
 
 .panel-footer {
 	border-top: 1px solid #f2f2f2;
+    overflow: hidden;
 }
 
 .panel--boxed {
